--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "homepage": "https://annadan1.github.io/online-store/",
   "scripts": {
     "test": "",
     "prebuild": "rm -rf dist",
     "build": "webpack --config webpack.config.js",
-    "start": "npx webpack serve --open --config webpack.config.js"
+    "start": "webpack serve --open --config webpack.config.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -37,6 +40,7 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "webpack-cli": "^4.10.0",
